<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBlack"
    android:fadingEdge="horizontal"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/tv1"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="10dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:paddingTop="30dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:text="@string/label_BMI"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:typeface="serif" />


    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_cal"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/label_wei"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        android:typeface="serif" />


    <EditText
        android:id="@+id/weight"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/label_kg"
        android:ems="10"
        android:fadingEdgeLength="10dp"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:importantForAutofill="no">
        <requestFocus />
    </EditText>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/label_hei"
        android:id="@+id/tv3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        android:typeface="serif" />


    <EditText
        android:id="@+id/height"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:hint="@string/label_cm"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/colorWhite"
        android:importantForAutofill="no">
    </EditText>


    <Button
        android:id="@+id/ib1"
        android:layout_width="158dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fadingEdge="vertical"
        android:longClickable="true"
        android:nextFocusRight="@color/colorBlack"
        android:text="@string/label_calculate"
        android:onClick="BMIConverter"
        android:visibility="visible" />


    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"

        android:text="@string/label_status"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_marginBottom="10dp"/>




</LinearLayout>